lazy load for github stars icons

--- a/src/index.html
+++ b/src/index.html
@@ -90,9 +90,18 @@ description: Online bureau of Alexander Solovyov, software engineer and blogger
 
   <div class="unit-3-4">
     <a href="https://github.com/piranha">Github</a>
-    <p class="top-gap-0"><a href="https://github.com/piranha/gostatic"><img src="https://img.shields.io/github/stars/piranha/gostatic?label=%E2%98%85"> gostatic</a>, fast static site generator this site uses</p>
-    <p class="top-gap-0"><img src="https://img.shields.io/github/stars/piranha/keymage?label=%E2%98%85"> <a href="https://github.com/piranha/keymage">keymage</a>, yet another JS keybinding library</p>
-    <p class="top-gap-0"><img src="https://img.shields.io/github/stars/piranha/keybind?label=%E2%98%85"> <a href="https://github.com/piranha/keybind">keybind</a>, ClojureScript key bindings library</p>
+    <p class="top-gap-0">
+      Fast static site generator this site uses:
+      <a href="https://github.com/piranha/gostatic">gostatic <img loading=lazy src="https://img.shields.io/github/stars/piranha/gostatic?label=%E2%98%85"></a>
+    </p>
+    <p class="top-gap-0">
+      Yet another JS keybindings library:
+      <a href="https://github.com/piranha/keymage">keymage <img loading=lazy src="https://img.shields.io/github/stars/piranha/keymage?label=%E2%98%85"></a>
+    </p>
+    <p class="top-gap-0">
+      ClojureScript key bindings library:
+      <a href="https://github.com/piranha/keybind">keybind <img loading=lazy src="https://img.shields.io/github/stars/piranha/keybind?label=%E2%98%85"></a>
+    </p>
     <p class="top-gap-0">...and more open source stuff!</p>
   </div>
 </div>
