longer cache for github icons

--- a/src/index.html
+++ b/src/index.html
@@ -92,15 +92,15 @@ description: Online bureau of Alexander Solovyov, software engineer and blogger
     <a href="https://github.com/piranha">Github</a>
     <p class="top-gap-0">
       Fast static site generator this site uses:
-      <a href="https://github.com/piranha/gostatic">gostatic <img loading=lazy src="https://img.shields.io/github/stars/piranha/gostatic?label=%E2%98%85"></a>
+      <a href="https://github.com/piranha/gostatic">gostatic <img loading=lazy src="https://img.shields.io/github/stars/piranha/gostatic?label=%E2%98%85&maxAge=86400"></a>
     </p>
     <p class="top-gap-0">
       Yet another JS keybindings library:
-      <a href="https://github.com/piranha/keymage">keymage <img loading=lazy src="https://img.shields.io/github/stars/piranha/keymage?label=%E2%98%85"></a>
+      <a href="https://github.com/piranha/keymage">keymage <img loading=lazy src="https://img.shields.io/github/stars/piranha/keymage?label=%E2%98%85&maxAge=86400"></a>
     </p>
     <p class="top-gap-0">
       ClojureScript key bindings library:
-      <a href="https://github.com/piranha/keybind">keybind <img loading=lazy src="https://img.shields.io/github/stars/piranha/keybind?label=%E2%98%85"></a>
+      <a href="https://github.com/piranha/keybind">keybind <img loading=lazy src="https://img.shields.io/github/stars/piranha/keybind?label=%E2%98%85&maxAge=86400"></a>
     </p>
     <p class="top-gap-0">...and more open source stuff!</p>
   </div>
