--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,10 @@ description: Online bureau of Alexander Solovyov, software engineer and blogger
 
 <article itemscope itemtype="http://schema.org/Person">
   <img itemprop="image" style="float: right" src="{{ version . "static/asolovyov.jpg" }}">
-  <p class="lead">I'm <span itemprop="name">Alexander Solovyov</span>, software engineer and blogger <i>(I guess)</i>.</p>
-  <p>I'm a <span itemprop="jobTitle">Chief Product Officer</span> at <span itemprop="memberOf" itemscope itemtype="http://schema.org/Organization"><a itemprop="url" href="https://kasta.ua/"><span itemprop="brand">Kasta</span></a></span>, and before long I've been a CTO there - we're focused on building slick one-stop ecommerce platform for both consumer and producers.</p>
+  <p class="lead">Hi! I'm <span itemprop="name">Alexander Solovyov</span> and that's my site.</p>
+  <p>I'm a <span itemprop="jobTitle">Chief Product Officer</span>
+    at <span itemprop="memberOf" itemscope itemtype="http://schema.org/Organization"><a itemprop="url" href="https://kasta.ua/"><span itemprop="brand">Kasta</span></a></span>,
+    and before long I've been a CTO there - we're focused on building slick one-stop ecommerce platform for both consumer and producers.</p>
   <p>If you want to contact me, use my email: <script type="text/javascript">document.write("<n uers=\"znvygb:nyrknaqre\100fbybilbi\056arg\">nyrknaqre\100fbybilbi\056arg<\057n>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></p>
 </article>
 
