--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@ title: Alexander Solovyov
 description: Online bureau of Alexander Solovyov, software engineer and blogger
 ----
 
-<article itemscope itemtype="http://schema.org/Person">
-  <img itemprop="image" style="float: right" src="{{ version . "static/asolovyov.jpg" }}">
-  <p class="lead">Hi! I'm <span itemprop="name">Alexander Solovyov</span> and that's my site.</p>
-  <p>I'm a <span itemprop="jobTitle">Chief Product Officer</span>
+<article itemscope itemtype="http://schema.org/Person" class="h-card">
+  <img itemprop="image" class="u-photo" style="float: right" src="{{ version . "static/asolovyov.jpg" }}">
+  <p class="lead">Hi! I'm <span itemprop="name" class="p-name">Alexander Solovyov</span> and that's my site.</p>
+  <p>I'm a <span itemprop="jobTitle" class="p-job-title">Chief Product Officer</span>
     at <span itemprop="memberOf" itemscope itemtype="http://schema.org/Organization"><a itemprop="url" href="https://kasta.ua/"><span itemprop="brand">Kasta</span></a></span>,
     and before long I've been a CTO there - we're focused on building slick one-stop ecommerce platform for both consumer and producers.</p>
   <p>If you want to contact me, use my email: <script type="text/javascript">document.write("<n uers=\"znvygb:nyrknaqre\100fbybilbi\056arg\">nyrknaqre\100fbybilbi\056arg<\057n>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></p>
@@ -61,7 +61,7 @@ description: Online bureau of Alexander Solovyov, software engineer and blogger
   </div>
 
   <div class="unit">
-    <a href="http://twitter.com/asolovyov">Twitter</a>
+    <a href="http://twitter.com/asolovyov" rel="me">Twitter</a>
     <p class="top-gap-0">I'm chirping on Twitter a bit.</p>
   </div>
 </div>
@@ -85,7 +85,7 @@ description: Online bureau of Alexander Solovyov, software engineer and blogger
 {{/* Github */}}
 <div class="flex-left top-gap">
   <div class="index-icon">
-    <a href="https://github.com/piranha">
+    <a href="https://github.com/piranha" rel="me">
       <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#github"></svg>
     </a>
   </div>
