--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,14 @@ description: Online bureau of Alexander Solovyov, software engineer and blogger
 ----
 
 <article itemscope itemtype="http://schema.org/Person" class="h-card">
+  <link rel="me" class="u-uid u-url" href="https://solovyov.net/">
   <img itemprop="image" class="u-photo" style="float: right" src="{{ version . "static/asolovyov.jpg" }}">
   <p class="lead">Hi! I'm <span itemprop="name" class="p-name">Alexander Solovyov</span> and that's my site.</p>
-  <p>I'm a <span itemprop="jobTitle" class="p-job-title">Chief Product Officer</span>
+  <p class="p-note">I'm a <span itemprop="jobTitle" class="p-job-title">Chief Product Officer</span>
     at <span itemprop="memberOf" itemscope itemtype="http://schema.org/Organization"><a itemprop="url" href="https://kasta.ua/"><span itemprop="brand">Kasta</span></a></span>,
     and before long I've been a CTO there - we're focused on building slick one-stop ecommerce platform for both consumer and producers.</p>
   <p>If you want to contact me, use my email: <script type="text/javascript">document.write("<n uers=\"znvygb:nyrknaqre\100fbybilbi\056arg\">nyrknaqre\100fbybilbi\056arg<\057n>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></p>
-</article>
+                                                                                                                                                                                                                                                    </article>
 
 <h2 id="presence">Online presence</h1>
 {{/* English */}}
@@ -118,7 +119,7 @@ description: Online bureau of Alexander Solovyov, software engineer and blogger
   </div>
 
   <div class="unit-3-4">
-    <a href="https://www.linkedin.com/in/asolovyov">Linkedin page</a>
+    <a href="https://www.linkedin.com/in/asolovyov" rel="me">Linkedin page</a>
     <p class="top-gap-0">You should be there, right? Right?</p>
   </div>
 </div>
