--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@ description: Online bureau of Alexander Solovyov, software engineer and blogger
 ----
 
 <article itemscope itemtype="http://schema.org/Person" class="h-card">
-  <link rel="me" class="u-uid u-url" href="https://solovyov.net/">
+  <link rel="me" class="u-uid u-url" href="https://solovyov.net/" title="solovyov.net" />
   <img itemprop="image" class="u-photo" style="float: right" src="{{ version . "static/asolovyov.jpg" }}">
   <p class="lead">Hi! I'm <span itemprop="name" class="p-name">Alexander Solovyov</span> and that's my site.</p>
   <p class="p-note">I'm a <span itemprop="jobTitle" class="p-job-title">Chief Product Officer</span>
