--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,8 @@ description: Online bureau of Alexander Solovyov, software engineer and blogger
 ----
 
 <article itemscope itemtype="http://schema.org/Person" class="h-card">
-  <link rel="me" class="u-uid u-url" href="https://solovyov.net/" title="solovyov.net" />
   <img itemprop="image" class="u-photo" style="float: right" src="{{ version . "static/asolovyov.jpg" }}">
-  <p class="lead">Hi! I'm <span itemprop="name" class="p-name">Alexander Solovyov</span> and that's my site.</p>
+  <p class="lead">Hi! I'm <span itemprop="name" class="p-name">Alexander Solovyov</span> and that's <a class="u-uid u-url" href="https://solovyov.net/">my site</a>.</p>
   <p class="p-note">I'm a <span itemprop="jobTitle" class="p-job-title">Chief Product Officer</span>
     at <span itemprop="memberOf" itemscope itemtype="http://schema.org/Organization"><a itemprop="url" href="https://kasta.ua/"><span itemprop="brand">Kasta</span></a></span>,
     and before long I've been a CTO there - we're focused on building slick one-stop ecommerce platform for both consumer and producers.</p>
