--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 title: Alexander Solovyov
-description: Online bureau of Alexander Solovyov, software engineer and blogger
+description: Blog of of Alexander Solovyov
 ----
 
 <article itemscope itemtype="http://schema.org/Person" class="h-card">
