--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 fulltitle: Alexander Solovyov
-description: Blog of of Alexander Solovyov
+description: Blog of Alexander Solovyov
 ----
 
 <article itemscope itemtype="http://schema.org/Person" class="h-card">
