static size for photo

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@ description: Blog of Alexander Solovyov
 
 <article itemscope itemtype="http://schema.org/Person" class="h-card">
   <img itemprop="image" class="u-photo" style="float: right"
+       width="200px" height="250px"
        src="{{ version . "static/asolovyov.jpg" }}"
        srcset="{{ version . "static/asolovyov.jpg" }} 1x, {{ version . "static/asolovyov400.jpg" }} 2x">
   <p class="lead">Hi! I'm <span itemprop="name" class="p-name">Alexander Solovyov</span> and that's <a class="u-uid u-url" href="https://solovyov.net/">my site</a>.</p>
