add last posts to post footer

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@ description: Blog of Alexander Solovyov
 </ul>
 
 <h1 id="blog" class="mt">
-  <a href="https://solovyov.net/blog.atom" class="icon" title="RSS">
+  <a href="https://solovyov.net/blog.atom" title="RSS">
     <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#rss"/></svg>
   </a>
   Blog
