--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@ description: Blog of Alexander Solovyov
        src="{{ version . "static/asolovyov.jpg" }}"
        srcset="{{ version . "static/asolovyov.jpg" }} 1x, {{ version . "static/asolovyov400.jpg" }} 2x">
   <p class="lead">Hi! I'm <span itemprop="name" class="p-name">Alexander Solovyov</span> and that's <a class="u-uid u-url" href="https://solovyov.net/">my site</a>.</p>
-  <p class="p-note">I'm a <span itemprop="jobTitle" class="p-job-title">Chief Product Officer</span>
+  <p class="p-note">I'm a <span itemprop="jobTitle" class="p-job-title">CTO</span>
     at <span itemprop="memberOf" itemscope itemtype="http://schema.org/Organization"><a itemprop="url" href="https://kasta.ua/"><span itemprop="brand">Kasta</span></a></span>,
-    and before that I've been a CTO there - we're focused on building slick one-stop ecommerce platform for both consumer and producers.</p>
+    - we're focused on building slick one-stop ecommerce platform for both consumers and producers.</p>
   <p>If you want to contact me, use my email: <script type="text/javascript">document.write("<n uers=\"znvygb:nyrknaqre\100fbybilbi\056arg\">nyrknaqre\100fbybilbi\056arg<\057n>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></p>
 </article>
 
