put a link to my twitter in the end of every post

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,15 @@ description: Blog of Alexander Solovyov
 
 <ul class>
   <li>
-    <a href="http://twitter.com/asolovyov" title="Twitter">
+    <a href="https://twitter.com/asolovyov" title="Twitter">
       <svg class="small-icon"><use xlink:href="{{ version . "static/icons.svg" }}#twitter"/></svg>
       Twitter
+    </a>
+  </li>
+  <li>
+    <a href="https://youtube.com/c/asolovyov" title="YouTube">
+      <svg class="small-icon"><use xlink:href="{{ version . "static/icons.svg" }}#youtube"/></svg>
+      YouTube
     </a>
   </li>
   <li>
