add link to telegram channel

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,12 @@ description: Blog of Alexander Solovyov
     </a>
   </li>
   <li>
+    <a href="https://t.me/bitethebyte" title="Telegram">
+      <svg class="small-icon"><use xlink:href="{{ version . "static/icons.svg" }}#telegram"/></svg>
+      Telegram (in Ukrainian)
+    </a>
+  </li>
+  <li>
     <a href="https://youtube.com/c/asolovyov" title="YouTube">
       <svg class="small-icon"><use xlink:href="{{ version . "static/icons.svg" }}#youtube"/></svg>
       YouTube
