link to channel archives

--- a/src/channel/index.html
+++ b/src/channel/index.html
@@ -2,7 +2,21 @@ title: Bite the Byte
 description: Архів телеграм-каналу Bite the Byte
 ----
 
-<h1>{{ .Title }}</h1>
+<div class="tabs group clear">
+  <h1 class="selected">
+    <a href="https://t.me/bitethebyte" title="Telegram channel">
+      <svg class="icon15"><use xlink:href="{{ version . "static/icons.svg" }}#telegram"/></svg>
+    </a>
+    Bite the Byte (uk)
+  </h1>
+
+  <h1 class="opacity-75">
+    <a href="https://solovyov.net/blog.atom" title="RSS">
+      <svg class="icon15"><use xlink:href="{{ version . "static/icons.svg" }}#rss"/></svg>
+    </a>
+    <a href="/">Blog (en)</a>
+  </h1>
+</div>
 
 <blockquote class="small">
   Це - архів телеграм-каналу <a href="https://t.me/bitethebyte">Bite the Byte</a>.
