more readable channel index

--- a/src/channel/index.html
+++ b/src/channel/index.html
@@ -31,6 +31,6 @@ description: Архів телеграм-каналу Bite the Byte
 {{ cut "<article.*?>" "</article>" .Process.Content }}
 </article>
 
-<hr>
+<hr class="mb2">
 
 {{ end }}
