--- a/src/index.html
+++ b/src/index.html
@@ -11,24 +11,30 @@ description: Blog of Alexander Solovyov
   <p>Read <a href="/about/">about</a> page if you want to know more. Use email if you want to contact me: <script type="text/javascript">document.write("<n uers=\"znvygb:nyrknaqre\100fbybilbi\056arg\">nyrknaqre\100fbybilbi\056arg<\057n>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></p>
 </article>
 
-<ul>
+<ul class="nobullets">
   <li>
     <a href="https://twitter.com/asolovyov" title="Twitter">
       <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#twitter"/></svg>
-      Twitter
-    </a>
+      Twitter</a>
+    (mostly English)
   </li>
   <li>
     <a href="https://youtube.com/c/asolovyov" title="YouTube">
       <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#youtube"/></svg>
-      YouTube
-    </a>
+      YouTube</a>
+    (in Ukrainian)
+  </li>
+  <li>
+    <a href="https://t.me/bitethebyte" title="Telegram">
+      <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#telegram"/></svg>
+      Telegram</a>
+    (in Ukrainian)
   </li>
   <li>
     <a href="https://github.com/piranha" title="Github">
       <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#github"/></svg>
-      Github
-    </a>
+      Github</a>
+    (many languages 😀)
   </li>
   <li>
     <a href="slides/">
