add link to mastodon

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,12 @@ description: Blog of Alexander Solovyov
     (mostly English)
   </li>
   <li>
+    <a rel="me" href="https://mastodon.social/@asolovyov">
+      <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#mastodon"/></svg>
+      Mastodon</a>
+    (mostly English)
+  </li>
+  <li>
     <a href="https://youtube.com/c/asolovyov" title="YouTube">
       <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#youtube"/></svg>
       YouTube</a>
