--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@ description: Blog of Alexander Solovyov
 <article>
   <img class="float-right"
        style="height: 256px; width: 256px; margin: 0 auto;"
+       role="presentation"
        src="{{ version . "static/asolovyov.jpg" }}"
        srcset="{{ version . "static/asolovyov.jpg" }} 1x, {{ version . "static/asolovyov512.jpg" }} 2x">
   <p class="lead">Hi! I'm Alexander Solovyov and that's my site.</p>
