fix post about movyv

--- a/src/index.html
+++ b/src/index.html
@@ -15,37 +15,37 @@ description: Blog of Alexander Solovyov
 <ul class="nobullets">
   <li>
     <a href="https://twitter.com/asolovyov" title="Twitter">
-      <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#twitter"/></svg>
+      <svg class="icon"><use href="{{ version . "static/icons.svg" }}#twitter"/></svg>
       Twitter</a>
     (mostly English)
   </li>
   <li>
     <a rel="me" href="https://mastodon.social/@asolovyov">
-      <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#mastodon"/></svg>
+      <svg class="icon"><use href="{{ version . "static/icons.svg" }}#mastodon"/></svg>
       Mastodon</a>
     (mostly English)
   </li>
   <li>
     <a href="https://youtube.com/c/asolovyov" title="YouTube">
-      <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#youtube"/></svg>
+      <svg class="icon"><use href="{{ version . "static/icons.svg" }}#youtube"/></svg>
       YouTube</a>
     (in Ukrainian)
   </li>
   <li>
     <a href="https://t.me/bitethebyte" title="Telegram">
-      <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#telegram"/></svg>
+      <svg class="icon"><use href="{{ version . "static/icons.svg" }}#telegram"/></svg>
       Telegram</a>
     (in Ukrainian)
   </li>
   <li>
     <a href="https://github.com/piranha" title="Github">
-      <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#github"/></svg>
+      <svg class="icon"><use href="{{ version . "static/icons.svg" }}#github"/></svg>
       Github</a>
     (many languages 😀)
   </li>
   <li>
     <a href="slides/">
-      <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#slideshow"/></svg>
+      <svg class="icon"><use href="{{ version . "static/icons.svg" }}#slideshow"/></svg>
       Slides from my talks
     </a>
   </li>
@@ -54,14 +54,14 @@ description: Blog of Alexander Solovyov
 <div class="tabs group clear">
 <h1 class="selected">
   <a href="https://solovyov.net/blog.atom" title="RSS">
-    <svg class="icon15"><use xlink:href="{{ version . "static/icons.svg" }}#rss"/></svg>
+    <svg class="icon15"><use href="{{ version . "static/icons.svg" }}#rss"/></svg>
   </a>
   Blog (en)
 </h1>
 
 <h1 class="opacity-75">
   <a href="https://t.me/bitethebyte" title="Telegram channel">
-    <svg class="icon15"><use xlink:href="{{ version . "static/icons.svg" }}#telegram"/></svg>
+    <svg class="icon15"><use href="{{ version . "static/icons.svg" }}#telegram"/></svg>
   </a>
   <a href="/channel/">Bite the Byte (uk)</a>
 </h1>
